# pns-c

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
td1/: CMakeLists.txt  abs.c  cat-num.c  comptage.c  comptage2.c  conv-v1.c  conv-v2.c  entiers.c  essai  wc.c
td2/: CMakeLists.txt  calc.c  comments.c  dump-hex.c  insertion-tableau.c
td3/: CMakeLists.txt  fgrep.c  palindrome.c  recherche.c  shuffle.c  stdfns.c  suppress-big.c  suppress.c
td4/: CMakeLists.txt  calc-va.c  cat-strs.c  moyenne.c  printf.c
td5/: CMakeLists.txt  echo.c  strs.c
td6/: CMakeLists.txt  better-echo.c  cat.c  iterate.c  map.c  opts-analyzer.c
td7/: CMakeLists.txt  arbre.c  lecture.c  liste.c  pilev1.c  pilev2.c  strtok.c
td8/: CMakeLists.txt  main.c  table-arbre.c  table-liste.c  table-tableau.c  table.h
td9/: CMakeLists.txt  bigset.c  power.c  printbase.c  xor.c
